--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
               aria-label="Menu button"
             >
               <span class="store-name">Davii Collections</span>
-              <span class="user-img" aria-label="User image">DC</span>
+              <span class="user-img" aria-hidden="true">DC</span>
             </button>
             <span
               aria-live="polite"
@@ -214,7 +214,7 @@
               <li>
                 <h2 href="https://admin.shopify.com" id="menu-title" class="menu-title">
                   <div class="flex-wrapper">
-                    <span class="user-img" aria-label="User image">DC</span
+                    <span class="user-img" aria-hidden="true">DC</span
                     ><span>Davii Collections</span>
                   </div>
                   <svg
